# 3dptv

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKER_LINUX_GUIDE.md  DOCKER_WINDOWS_GUIDE.md  Dockerfile  INSTALLATION_LINUX.MD  README.md  RUNNING_THE_APPLICATION.md  entrypoint.sh  tclIndex
3dptv_vc2008/: 3dptv.sln
3dptv_vc2008/3dptv_vc2008/: 3dptv.vcproj
src_c/: CMakeLists.txt  change_parameter.c  checkpoints.c  correspondences.c  demo.c  draw.c  epi.c  globals.h  image_processing.c  imgcoord.c  intersect.c  jw_ImgFmtTIF.c  jw_main.c  jw_ptv.c  jw_ptv_DEBASHISH.c  license.txt  lsqadj.c  mousefunction.c  mousefunctionOld.c  multimed.c  orientation.c  peakfitting.c  pointpos.c  pointpos_Markus.c  ptv.c  ptv.h  ray_tracing.c  rotation.c  segmentation.c  sortgrid.c  sortgrid_back.c  tools.c  track.c  trafo.c  ttools.c  typedefs.h  vrml.c  vrml2.c
test/: dt_lsq  raw1.ori  raw2.ori  raw3.ori
test/cal/: cam2.tif.ori
test/parameters/: criteria.par  track.par
